core: add deep research on sadiq() (ADR-031)